[Nick] Rewrite Readme with overview, module map, codec/transport tables, and themed roadmap